kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mon-app
  labels:
    name: mon-app
    environment: development
