kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-app
  namespace: mon-app
  labels:
    app: mon-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mon-app
  template:
    metadata:
      labels:
        app: mon-app
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: mon-app
          image: ghcr.io/tasnimft2026/mon-app:main-d58c361
          imagePullPolicy: Always

          ports:
            - containerPort: 80
              name: http

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

          # 🔐 Variables d'environnement depuis Secret
