kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mon-app
  namespace: mon-app
  labels:
    app: mon-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: mon-app
